Maths.bnf
<Program> ::= <Expression> <Program>;
<Expression> ::= <Addition> | <Multiplication> | <Negation> | "(" <Expression> ")" | <Number>;
<Addition> ::= <Expression> ("+" | "-") <Expression>;
<Multiplication> ::= <Expression> ("*" | "/") <Expression>;
<Negation> ::= "-" <Expression>;
